Fix horizontal spacing of console headers
I'm working on improving the header and console groups that appear in
it. This is leading to the "links" and "Oncalls" to take up more of
the available horizontal space. See:
https://ci.chromium.org/p/chromium/g/chromium.gpu%20rotation/console
To remedy this, apply a min width to the last console-header-column
since both sides of this table use the same type.

Bug: 40873502
Reviewed-on: https://chromium-review.googlesource.com/c/infra/luci/luci-go/+/6325391
Commit-Queue: Struan Shrimpton <sshrimp@google.com>

--- a/milo/frontend/static/common/css/console.css
+++ b/milo/frontend/static/common/css/console.css
@@ -87,6 +87,10 @@
   flex-direction: column;
 }
 
+.console-header-column:last-of-type {
+  min-width: 75%;
+}
+
 .console-header-groups {
   display: flex;
   justify-content: space-evenly;
